# caiman

./: README.md  caiman.yaml  pyproject.toml  requirements.txt
caiman/: config.py  deployment.py  installer.py  loader.py  manifest.py  run.py  source.py  target.py  task.py
caiman/device/: fs.py  handler.py
caiman/mount/: fs.py
caiman/plugins/: base.py  builder.py  core.py  deploy.py  fs.py  installer.py  runner.py  workspace.py
caiman/proc/: base.py  device.py  local.py
caiman/remote/caiman/: fs.py
micropython/: main.py
